Ajustando posicionamento do botão.

--- a/frontend/views/layout.ejs
+++ b/frontend/views/layout.ejs
@@ -1425,7 +1425,7 @@
                 <label for="atendente-tarefa-input">Atendente:</label>
                 <div class="autocomplete-container">
                     <input type="text" id="atendente-tarefa-input" class="autocomplete-input" placeholder="Digite para buscar atendente" required>
-                    <button type="button" class="autocomplete-clear" style="margin-right: 10px; margin-bottom: 10px;">&times;</button>
+                    <button type="button" class="autocomplete-clear" style="margin-right: 15px; margin-bottom: 10px;margin-top: -7px; ">&times;</button>
                     <div id="atendente-tarefa-suggestions" class="autocomplete-suggestions"></div>
                     <input type="hidden" id="atendente-tarefa-id" name="atendenteId">
                 </div><br><br>
